<resources>
    <string name="app_name">Area &amp; Unit Converter</string>
    <string name="area">AREA</string>
    <string name="welcome">Welcome!</string>
    <string name="title">Choose a figure:-</string>
    <string name="triangle">TRIANGLE</string>
    <string name="square">SQUARE</string>
    <string name="polygon">POLYGON</string>
    <string name="ellipse">ELLIPSE</string>
    <string name="trapezoid">TRAPEZOID</string>
    <string name="sector_of_the_circle">SECTOR OF THE CIRCLE</string>
    <string name="rectangle">RECTANGLE</string>
    <string name="parallelogram">PARALLELOGRAM</string>
    <string name="circle">CIRCLE</string>
    <string name="heading">Enter dimensions of the figure:-</string>
    <string name="suggest">Choose a figure :-</string>

</resources>