<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".areaActivity"
    android:background="#FFF5E4"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/suggest"
        android:textColor="#850E35"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/triangle"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFC4C4"
            android:text="@string/triangle"
            android:textColor="#850E35"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/rectangles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFC4C4"
            android:text="@string/rectangle"
            android:textColor="#850E35"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/square"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFC4C4"
            android:text="@string/square"
            android:textColor="#850E35"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/parallelogram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC4C4"
            android:text="@string/parallelogram"
            android:textColor="#850E35"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFC4C4"
            android:text="@string/circle"
            android:textColor="#850E35"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/polygon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFC4C4"
            android:text="@string/polygon"
            android:textColor="#850E35"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ellipse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFC4C4"
            android:text="@string/ellipse"
            android:textColor="#850E35"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>